--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,8 +20,8 @@ layout: default
     {{ content }}
   </div>
 
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
+  {%- if site.giscus.repo -%}
+    {%- include giscus_comments.html -%}
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
