--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -200,7 +200,7 @@ img {
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-center;
+  justify-content: center;
   font-size: 20px;
   transition: all 0.3s ease;
   z-index: 100;
